updates to content in the checkboxes for provider and authority

--- a/app/views/v1-1/local-authority/confirmation.html
+++ b/app/views/v1-1/local-authority/confirmation.html
@@ -19,7 +19,7 @@
     
 
       <h2 class="govuk-heading-m">What happens next</h2>
-      <p>An email has been sent to the volunteer which contains their Emergency Volunteer Leave certificate.</p>
+      <p>An email has been sent to the volunteer which contains their certificate for the Emergency Volunteering Scheme.</p>
      
 
 
