--- a/app/views/v1-1/local-authority/view-info-1.html
+++ b/app/views/v1-1/local-authority/view-info-1.html
@@ -166,6 +166,12 @@
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses" checked disabled>
           <label class="govuk-label govuk-checkboxes__label" for="waste">
+            are authorised by their organisation to make these statements
+          </label>
+        </div>
+        <div class="govuk-checkboxes__item">
+          <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses" checked disabled>
+          <label class="govuk-label govuk-checkboxes__label" for="waste">
             have the correct insurance and indemnity arrangements in place to cover the volunteer during the placement
           </label>
         </div>
@@ -178,7 +184,7 @@
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste-2" name="waste" type="checkbox" value="mines" checked disabled>
           <label class="govuk-label govuk-checkboxes__label" for="waste-2">
-            have, or will, check that the volunteer is eligible to work (checked DBS) have a genuine placement that they need to fill
+            have, or will, check that the volunteer is eligible to work (checked DBS)
           </label>
         </div>
   <!--    <div class="govuk-checkboxes__item">
@@ -204,7 +210,7 @@
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
           <label class="govuk-label govuk-checkboxes__label" for="waste">
-            I confirm that I am authorised by the health or local authority to make these statements.
+            I confirm that I am authorised by the health or local authority to make these statements
           </label>
         </div>
         <div class="govuk-checkboxes__item">
