--- a/app/views/v1-1/provider/view-info-1.html
+++ b/app/views/v1-1/provider/view-info-1.html
@@ -142,7 +142,7 @@
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste-3" name="waste" type="checkbox" value="mines">
           <label class="govuk-label govuk-checkboxes__label" for="waste-3">
-            I confirm that I am authorised by my organisation to make these statements.</label>
+            I confirm that I am authorised by my organisation to make these statements</label>
         </div>
         <div class="govuk-checkboxes__item">
           <input class="govuk-checkboxes__input" id="waste" name="waste" type="checkbox" value="carcasses">
