--- a/app/views/v1-1/volunteer/placement-start.html
+++ b/app/views/v1-1/volunteer/placement-start.html
@@ -23,7 +23,7 @@
             </h1>
           </legend>
           <p>
-            If you don't know the exact start date, you can provide an approximate date
+            If you don't know the exact start date, you can provide an approximate date.
           </p>
           <span id="passport-issued-hint" class="govuk-hint">
             For example, 12 11 2007
