--- a/app/views/v1-1/local-authority/view-info-1.html
+++ b/app/views/v1-1/local-authority/view-info-1.html
@@ -12,7 +12,7 @@
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds-from-desktop">
 
-      <h1 class="govuk-heading-xl">Confirm or deny Emergency Volunteering Scheme certification</h1>
+      <h1 class="govuk-heading-xl">Confirm certificate for the Emergency Volunteering Scheme</h1>
 
       <h2 class="govuk-heading-l">Volunteer details</h2>
 
