--- a/app/views/v1-1/provider/org-funding-2.html
+++ b/app/views/v1-1/provider/org-funding-2.html
@@ -13,9 +13,10 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <h1 class="govuk-heading-xl">Tell us who the appropriate local authority or health authority is</h1>
+      <h1 class="govuk-heading-xl">Tell us who the appropriate authority is</h1>
 
-      <p>Before a volunteer can begin their placement, their application needs to be certified. If they are providing social care services they will be certified by the appropriate local authority, if health services they will be certified by the appropriate health authority. </p>
+      <p>Before a volunteer can begin their placement, their application needs to be certified.</p>
+      <p>If they are providing social care services they will be certified by the appropriate local authority, if health services they will be certified by the appropriate health authority. </p>
       
   <!--   <p class="govuk-body">If the organisation you work for:</p>
         <ul class="govuk-list govuk-list--bullet">
