--- a/app/views/v1-1/volunteer/confirmation.html
+++ b/app/views/v1-1/volunteer/confirmation.html
@@ -16,15 +16,16 @@
         </div>
       </div>
 
-      <p>
+ <!--  <p>
         We've sent you a confirmation email which contains your reference number.
-      </p>
+      </p> --> 
 
       <h2 class="govuk-heading-m">What happens next</h2>
       <p>The contact for your placement will be emailed a link to verify your application. You may want to check they have received the email if you hope to start your placement within the next 7 days.</p>
       <p>Your local authority or health authority will then approve the application, this is required for you to receive compensation.</p>
-      <p>We're currently working on Emergency Volunteering compensation ready for when you finish your placement. For updates, you can search for Emergency Volunteering Scheme on <a href="#">GOV.UK</a>.
-      </p>
+      <p>We're currently working on Emergency Volunteering compensation ready for when you finish your placement.</p> 
+      <p>For future updates on compensation, check the <a href="https://www.gov.uk/guidance/guidance-on-the-emergency-volunteering-scheme">guidance on applying to the Emergency Volunteering Scheme</a>.</p>
+      
 
     </div>
   </div>
