--- a/app/views/v1-1/provider/confirmation.html
+++ b/app/views/v1-1/provider/confirmation.html
@@ -18,7 +18,7 @@
       <h2 class="govuk-heading-m">What happens next</h2>
       <p>Once [name of local authority/health authority selected] have checked the application they will either accept or decline it. If it is accepted, then you and the volunteer will receive an email with the certificate.</p>
       <p>The certificate allows the volunteer to  begin their placement.</p>
-      <p>When the placement ends the volunteer will be entitled to compensation. You can read more about compensation within our guidance for the Emergency Volunteering Scheme on <a href="#">GOV.UK</a>.</p>
+      <p>When the placement ends the volunteer will be entitled to compensation. You will be asked to confirm the volunteer has finished their placement.</p>
 
 
     </div>
