--- a/app/views/index.html
+++ b/app/views/index.html
@@ -7,40 +7,44 @@
 
 {% block content %}
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
-        Apply for Emergency Volunteering Scheme
-        
-      </h1>
-        <p class="govuk-lede">
-          These prototypes have been assembled very quick and are a communication tool which demonstrates a current understanding of how things work.
-        </p>
+<div class="govuk-width-container">
+  <main class="govuk-main-wrapper">
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <h1 class="govuk-heading-xl">
+            Apply for Emergency Volunteering Scheme
+          </h1>
+          </div>
+        </div>
 
-          <hr>
-          <br>
+          <div class="govuk-grid-row">
+            <div class="govuk-grid-column-two-thirds">
+         
+            <p class="govuk-lede">
+              These prototypes have been assembled very quick and are a communication tool which demonstrates a current understanding of how things work.
+            </p>
 
-          <h2 class="govuk-heading-l">Full journey v1.1</h2>
-          <p>Last updated: Tuesday 6 April 2020</p>
-          <ol class="govuk-list govuk-list--number">
-            <li><p><a href="v1-1/volunteer/start">Volunteer applying for Emergency Volunteering Leave</a>
-              <br><a href="v1-1/emails/to-provider.html">Email to provider with a link to approve volunteer information</a>
-            </li>
+            <hr>
+            <br>
 
-            <li><a href="v1-1/provider/view-info-1">Provider checking volunteer information</a>
-              <br><a href="v1-1/emails/to-volunteer-rejected-by-provider.html">Email to volunteer they have been rejected by provider or Local Authority</a>
-              <br><a href="v1-1/emails/to-LA-to-approve">Email to Local Authority to approve volunteer and provider information </a></li>
+            <h2 class="govuk-heading-l">Full journey v1.1</h2>
+            <p>Last updated: Tuesday 6 April 2020</p>
+              <ol class="govuk-list govuk-list--number">
+                <li><p><a href="v1-1/volunteer/start">Volunteer applying for Emergency Volunteering Leave</a>
+                  <br><a href="v1-1/emails/to-provider.html">Email to provider with a link to approve volunteer information</a>
+                </li>
 
-              <p></p>
+                <li><a href="v1-1/provider/view-info-1">Provider checking volunteer information</a>
+                <br><a href="v1-1/emails/to-volunteer-rejected-by-provider.html">Email to volunteer they have been rejected by provider or Local Authority</a>
+                <br><a href="v1-1/emails/to-LA-to-approve">Email to Local Authority to approve volunteer and provider information </a></li>
+                <p></p>
 
-
-            <li><a href="v1-1/local-authority/view-info-1">Local authority approving volunteer and provider info</a>
-              <br><a href="v1-1/emails/to-LA-after-approval">Email to Local Authority to confirm their own approval</a>
-                <br><a href="v1-1/emails/to-LA-after-rejecting">Email to Local Authority to confirm their own rejection</a>
-                  <br><a href="v1-1/emails/to-provider-after-rejected-from-LA">Email to provider to confirm rejection by Local Authority</a>
-                    <br><a href="v1-1/emails/to-volunteer-certificate">Email to volunteer with their certificate</a></li>
-
-          </ol>
+                <li><a href="v1-1/local-authority/view-info-1">Local authority approving volunteer and provider info</a>
+                  <br><a href="v1-1/emails/to-LA-after-approval">Email to Local Authority to confirm their own approval</a>
+                    <br><a href="v1-1/emails/to-LA-after-rejecting">Email to Local Authority to confirm their own rejection</a>
+                      <br><a href="v1-1/emails/to-provider-after-rejected-from-LA">Email to provider to confirm rejection by Local Authority</a>
+                        <br><a href="v1-1/emails/to-volunteer-certificate">Email to volunteer with their certificate</a></li>
+                </ol>
 <br>
 <hr>
 <br>
@@ -158,6 +162,38 @@
 
       
     </div>
+
+    <div class="govuk-grid-column-one-third">
+
+        <aside class="app-related-items" role="complementary">
+             <h2 class="govuk-heading-m" id="subsection-title">
+               Guidance prototypes
+             </h2>
+             <nav role="navigation" aria-labelledby="subsection-title">
+               <ul class="govuk-list govuk-!-font-size-16">
+                 <li>
+                   <a href="guidance/volunteer/evs_volunteer_guidance">
+                     Volunteer guidance
+                   </a>
+                 </li>
+                 <li>
+                   <a href="/government/publications/coronavirus-bill-summary-of-impacts">
+                     Coronavirus bill: summary of impacts
+                   </a>
+                 </li>
+                 <li>
+                   <a href="#" class="govuk-!-font-weight-bold">
+                     More <span class="govuk-visually-hidden">in Subsection</span>
+                   </a>
+                 </li>
+               </ul>
+             </nav>
+           </aside> 
+     
+         </div>
+</div>
+
+</main>
 </div>
 
 {% endblock %}
