added a link to the index page to the Miro board. Easier for people to access.

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,15 +14,23 @@
           <h1 class="govuk-heading-xl">
             Apply for Emergency Volunteering Scheme
           </h1>
+
+          <p class="govuk-lede">
+            These prototypes have been assembled very quick and are a communication tool which demonstrates a current understanding of how things work.
+          </p>
+
+          <div class="govuk-inset-text">
+           <p>Take a look at <a href="https://miro.com/app/board/o9J_kuaIYR0=/">the EVS Miro Journey map</a> we've created in an attempt to create a source of truth for how things work.</p>
+          <p>This is a Work In Progress.</p>
+          </div>
+
           </div>
         </div>
 
           <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
          
-            <p class="govuk-lede">
-              These prototypes have been assembled very quick and are a communication tool which demonstrates a current understanding of how things work.
-            </p>
+            
 
             <hr>
             <br>
