links updated for volunteer guidance

--- a/app/views/guidance/volunteer/guidance_changes-to-placement.html
+++ b/app/views/guidance/volunteer/guidance_changes-to-placement.html
@@ -181,26 +181,27 @@
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="/carers-allowance/if-youre-working-">Who can volunteer</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_who-can-volunteer">Who can volunteer</a>
 
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          If you're working
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_if-youre-working">If you’re working</a>
+
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="/carers-allowance/if-youre-working-">If you’re un-employed or retired</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_if-youre-unemployed-or-retired">If you’re un-employed or retired</a>
 
         </li>
       </li>
       <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-        <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="/carers-allowance/if-youre-working-">Apply for a certificate to join the Emergency Volunteering Scheme</a>
+        <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_apply">Apply for a certificate to join the Emergency Volunteering Scheme</a>
 
       </li>
     </li>
     <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-      <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="/carers-allowance/if-youre-working-">Changes to your volunteering placement</a>
+      Changes to your volunteering placement
 
     </li>
     </ol>
@@ -213,8 +214,7 @@
 
 <div class="gem-c-govspeak govuk-govspeak direction-ltr disable-youtube" data-module="govspeak">
   <br>
-  <h2 id="who-can-volunteer">If you’re un-employed or retired</h2>
-  <p>If you are currently employed, you may be able to access Emergency Volunteering Leave (EVL) to complete your placement, however you can see a full list of exceptions in this guidance.</p>  
+  <h2 id="who-can-volunteer">Changes to your volunteering placement</h2>
    
    
   </div>
