--- a/app/views/guidance/volunteer/guidance_apply.html
+++ b/app/views/guidance/volunteer/guidance_apply.html
@@ -181,17 +181,17 @@
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="/carers-allowance/if-youre-working-">Who can volunteer</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_who-can-volunteer.html">Who can volunteer</a>
 
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_if-youre-working"">If you’re working</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_if-youre-working">If you’re working</a>
 
 
         </li>
         <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="/carers-allowance/if-youre-working-">If you’re un-employed or retired</a>
+          <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_if-youre-unemployed-or-retired">If you’re un-employed or retired</a>
 
         </li>
       </li>
@@ -201,7 +201,7 @@
       </li>
     </li>
     <li class="gem-c-contents-list__list-item gem-c-contents-list__list-item--dashed">
-      <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="/carers-allowance/if-youre-working-">Changes to your volunteering placement</a>
+      <a class="gem-c-contents-list__link govuk-link " data-track-category="contentsClicked" data-track-action="content_item 6" data-track-label="/carers-allowance/if-youre-working-" data-track-options='{"dimension29":"If you’re working "}' href="guidance_changes-to-placement">Changes to your volunteering placement</a>
 
     </li>
     </ol>
@@ -216,7 +216,7 @@
   <br>
   <h2 id="who-can-volunteer"> Apply for a certificate to join the Emergency Volunteering Scheme
   </h2>
-  <p>If you are currently employed, you may be able to access Emergency Volunteering Leave (EVL) to complete your placement, however you can see a full list of exceptions in this guidance.</p>  
+  <p>Is there we will have the link to go to the <a href="/app/views/v1-1/volunteer/start">start page</a> for our prototype?</p>  
    
    
   </div>
@@ -224,7 +224,7 @@
         <nav class="gem-c-pagination" role="navigation" aria-label="Pagination">
   <ul class="gem-c-pagination__list" data-module="track-click">
       <li class="gem-c-pagination__item gem-c-pagination__item--next">
-        <a href="/carers-allowance/eligibility" class="gem-c-pagination__link" rel="next" data-track-category="contentsClicked" data-track-action="next" data-track-label="/carers-allowance/eligibility" data-track-dimension="next" data-track-dimension-index="29">
+        <a href="guidance_changes-to-placement.html" class="gem-c-pagination__link" rel="next" data-track-category="contentsClicked" data-track-action="next" data-track-label="/carers-allowance/eligibility" data-track-dimension="next" data-track-dimension-index="29">
           <span class="gem-c-pagination__link-title">
             <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewbox="0 0 17 13">
               <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
@@ -234,7 +234,7 @@
             </span>
           </span>
             <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-            <span class="gem-c-pagination__link-label">If you’re un-employed or retired</span>
+            <span class="gem-c-pagination__link-label">Changes to your volunteering placement</span>
         </a>
       </li>
   </ul>
