--- a/app/views/guidance/volunteer/guidance_if-youre-unemployed-or-retired.html
+++ b/app/views/guidance/volunteer/guidance_if-youre-unemployed-or-retired.html
@@ -223,7 +223,7 @@
         <nav class="gem-c-pagination" role="navigation" aria-label="Pagination">
   <ul class="gem-c-pagination__list" data-module="track-click">
       <li class="gem-c-pagination__item gem-c-pagination__item--next">
-        <a href="/carers-allowance/eligibility" class="gem-c-pagination__link" rel="next" data-track-category="contentsClicked" data-track-action="next" data-track-label="/carers-allowance/eligibility" data-track-dimension="next" data-track-dimension-index="29">
+        <a href="guidance_apply" class="gem-c-pagination__link" rel="next" data-track-category="contentsClicked" data-track-action="next" data-track-label="/carers-allowance/eligibility" data-track-dimension="next" data-track-dimension-index="29">
           <span class="gem-c-pagination__link-title">
             <svg class="gem-c-pagination__link-icon" xmlns="http://www.w3.org/2000/svg" height="13" width="17" viewbox="0 0 17 13">
               <path d="m10.107-0.0078125-1.4136 1.414 4.2926 4.293h-12.986v2h12.896l-4.1855 3.9766 1.377 1.4492 6.7441-6.4062-6.7246-6.7266z"></path>
@@ -233,7 +233,7 @@
             </span>
           </span>
             <span class="gem-c-pagination__link-divider visually-hidden">:</span>
-            <span class="gem-c-pagination__link-label">If you’re un-employed or retired</span>
+            <span class="gem-c-pagination__link-label">Apply for a certificate to join the Emergency Volunteering Scheme</span>
         </a>
       </li>
   </ul>
