--- a/app/views/index.html
+++ b/app/views/index.html
@@ -181,14 +181,10 @@
                <ul class="govuk-list govuk-!-font-size-16">
                  <li>
                    <a href="guidance/volunteer/guidance_how-it-works">
-                     Volunteer guidance
+                     Volunteer guidance (Work in progress)
                    </a>
                  </li>
-                 <li>
-                   <a href="guidance/volunteer/guidance_how-it-works">
-                     Coronavirus bill: summary of impacts
-                   </a>
-                 </li>
+                
                  <li>
                    <a href="#" class="govuk-!-font-weight-bold">
                      More <span class="govuk-visually-hidden">in Subsection</span>
